# stateline-cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  bimodal.cpp  simple.cpp
include/stateline/: worker.hpp
tests/system/: CMakeLists.txt  test.py  test_worker.cpp
